# game-of-life

./: CMakeLists.txt  Dependencies.cmake
include/grid/: gridClass.hpp  gridHelper.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/game-of-life/: CMakeLists.txt  main.cpp
src/grid/: CMakeLists.txt  sample_library.cpp
test/: constexpr_tests.cpp  tests.cpp
